...
      transactionDetails.swapDetails,
    [status, transactionDetails],
  );

  return (
    <BaseLayout insets={{ top: false }}>
      <View className="flex-1 justify-between" testID="swap-processing-screen">
        <View className="flex-1 items-center justify-center">
          <View className="items-center gap-[8px] w-full">
            {getStatusIcon()}

            <View className="mb-2">
              <Display xs medium>
...
              </Button>
            )}
            <Button
              tertiary
              xl
              onPress={onClose}
              testID="swap-processing-done-button"
            >
              {t("common.done")}
            </Button>
          </View>
        ) : (
          <View className="gap-[16px]">
...
