...
            tertiary
            xl
            isFullWidth
            onPress={() => onConfirm()}
            isLoading={isSigning || !!isValidatingMemo}
            disabled={!!isMemoMissing || isSigning || !!isValidatingMemo}
            testID="dapp-request-confirm-button"
          >
            {t("dappRequestBottomSheetContent.confirm")}
          </Button>
        </View>
      </View>
    );
...
